# spell_checker

./: .gitignore  CMakeLists.txt  Makefile  main.c  testWordsMac  utility.c  utility.h  words
